fix content scrollbars

--- a/src/style.scss
+++ b/src/style.scss
@@ -1051,7 +1051,7 @@ p {
 		max-width: calc(100% - 1.5rem);
 		box-sizing: border-box;
 		flex: 1;
-		overflow: auto;
+		overflow-x: auto;
 	}
 
 	@media screen and (max-width: 38rem) {
@@ -1141,7 +1141,7 @@ p {
 	position: relative;
 	box-sizing: border-box;
 	max-width: 100%;
-	overflow-y: scroll;
+	overflow-x: auto;
 
 	img {
 		max-width: 100%;
@@ -1155,7 +1155,7 @@ p {
 
 	code,
 	pre {
-		overflow: scroll;
+		overflow-x: auto;
 	}
 
 	figure {
